# catchy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-publish-agent-images.yml
configurations/: claude-code.yaml  codex.yaml
containers/claude-code/: Dockerfile
containers/codex/: Dockerfile
containers/ubuntu/: Dockerfile
containers/web/: Dockerfile
tests/: test_claude_code_agent.py  test_codex_agent.py
